# umrt-ros-poe-cam

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.in.xml
.github/workflows/: ros-build.yaml
launch/: mobile_publisher.launch.py
src/: mobilenet_publisher.cpp
